--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Brilliant Temollo Seloga</span>
+                    Hi, I'm <span>Brilliant Temollo Maloma</span>
                     Web Developer, Junior Project Manager, and Junior Data Scientist.
                 </h1>
                 <p>
