--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     Web Developer, Junior Project Manager, and Junior Data Scientist.
                 </h1>
                 <p>
-                    I am a passionate junior dedicated to building innovative solutions that empower businesses to thrive in the digital era. My expertise spans web and application development, data analysis, database management, and project coordination, ensuring seamless execution of technology-driven goals.<br>
-                    As a web developer, I specialize in creating efficient and user-friendly websites and applications using a variety of tools and technologies, including R, Python, SQL, HTML, CSS, JavaScript, and frameworks like Flask and Django. My work also involves providing actionable insights through advanced data analysis, enabling businesses to make informed decisions.<br>
+                    I am a passionate junior dedicated to building innovative solutions that empower businesses to thrive in the digital era. My expertise spans web and application development, data analysis, database management, and project coordination, ensuring seamless execution of technology-driven goals.<br> <br>
+                    As a web developer, I specialize in creating efficient and user-friendly websites and applications using a variety of tools and technologies, including R, Python, SQL, HTML, CSS, JavaScript, and frameworks like Flask and Django. My work also involves providing actionable insights through advanced data analysis, enabling businesses to make informed decisions.<br><br>
                     In my role as a junior project manager, I collaborate with cross-functional teams to ensure projects are delivered on time, within scope, and aligned with business objectives. I thrive on solving complex challenges and fostering productive teamwork to achieve success.
                 </p>
 
