--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </h1>
                 <p>
                     I am a passionate junior dedicated to building innovative solutions that empower businesses to thrive in the digital era. My expertise spans web and application development, data analysis, database management, and project coordination, ensuring seamless execution of technology-driven goals.<br> <br>
-                    As a web developer, I specialize in creating efficient and user-friendly websites and applications using a variety of tools and technologies, including R, Python, SQL, HTML, CSS, JavaScript, and frameworks like Flask and Django. My work also involves providing actionable insights through advanced data analysis, enabling businesses to make informed decisions.<br><br>
-                    In my role as a junior project manager, I collaborate with cross-functional teams to ensure projects are delivered on time, within scope, and aligned with business objectives. I thrive on solving complex challenges and fostering productive teamwork to achieve success.
+                    As a web developer, I specialize in creating efficient and user-friendly websites and applications using a variety of tools and technologies, including R, Python, HTML, CSS, JavaScript, and frameworks like Flask and Django. My work also involves providing actionable insights through advanced data analysis, enabling businesses to make informed decisions.<br><br>
+                    In my role as a junior project manager, I thrive on solving complex challenges and fostering productive teamwork to achieve success.
                 </p>
 
             </div>
@@ -44,9 +44,9 @@
                     <h4>Information About me</h4>
                     <p>
                         I am a skilled junior programmer and data scientist with a passion for building innovative solutions that help businesses thrive in the digital era. My expertise includes web and application development, data analysis, and database management, ensuring seamless integration of technology with business goals.<br><br>
-                        I am currently pursuing a degree in Computer Science at Walter Sisulu University. Originally from Limpopo, I am now based in the Eastern Cape, where I combine my academic journey with practical experience to expand my skills and knowledge in the ever-evolving tech industry.<br>
-                        With hands-on experience in a variety of tools and technologies — including R, Python, SQL, HTML, CSS, JavaScript, and frameworks like Flask and Django — I develop efficient, scalable systems and provide actionable insights through advanced data analysis. My work is driven by a passion for problem-solving and delivering impactful solutions that meet real-world needs.
-                        <br>I am deeply committed to continuous learning and professional growth, always eager to tackle new challenges in software development and data science. Collaboration and innovation are at the core of my approach, and I look forward to exploring opportunities to work together. Feel free to connect with me to discuss potential projects or collaborations.
+                        I am currently pursuing a degree in Computer Science at Walter Sisulu University. Originally from Limpopo, I am now based in the Eastern Cape, where I combine my academic journey with practical experience to expand my skills and knowledge in the tech industry.<br> <br>
+                        With hands-on experience in a variety of tools and technologies — including R, Python, HTML, CSS, JavaScript, and frameworks like Flask and Django — I develop efficient and provide actionable insights through advanced data analysis. My work is driven by a passion for problem-solving and delivering impactful solutions that meet real-world needs.
+                        <br><br>I am deeply committed to continuous learning and professional growth, always eager to tackle new challenges in software development and data science. Collaboration and innovation are at the core of my approach, and I look forward to exploring opportunities to work together. Feel free to connect with me to discuss potential projects or collaborations.
                     </p>
 
                 </div>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">Javascript</p>
                         <div class="progress-con">
                             <p class="prog-text">69%</p>
                             <div class="progress">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">c++</p>
+                        <p class="prog-title">C++</p>
                         <div class="progress-con">
                             <p class="prog-text">85%</p>
                             <div class="progress">
@@ -155,7 +155,7 @@
                     <p class="tl-duration">2023 - present</p>
                     <h5>Computer Science & Statistics <span> - Student</span></h5>
                     <p>
-                      Currently a student at Walter Sisulu University.
+                      Currently a 3rd student at Walter Sisulu University.
                     </p>
                 </div>
                 <div class="timeline-item">
