--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: brillianttemollo@gmail.com</span>
+                                    <span>: temollobrilliant@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
