--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Brilliant Temollo Seloga</span>
+                    Hi, I'm <span>Brilliant Temollo Maloma</span>
                     Web Developer, Junior Project Manager, and Junior Data Scientist.
                 </h1>
                 <p>
@@ -176,6 +176,16 @@
                     <h5>Junior Web Developer & Researcher.<span> - Infinity Cybertech</span></h5>
                     <p>
                         Currently working as Junior Web Developer & Reasearcher at Infinity CyberTech.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2025 - Present</p>
+                    <h5> Frontend Developer.<span> - Infinity Cybertech</span></h5>
+                    <p>
+                        Currently working as Frontend Developer on the project of Campus Nexus.
                     </p>
                 </div>
             </div>
