--- a/index.html
+++ b/index.html
@@ -214,6 +214,23 @@
                 </div>
 
             </div>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/port3.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Campus Nexus</h3>
+                        <div class="icons">
+                            <a href="https://www.infinitycybertech.com" class="icon">
+
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
         <section class="container contact" id="contact">
